new virtual shelves changes, keyed by biblionumber -- approved

--- a/koha-tmpl/intranet-tmpl/prog/en/about.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/about.tmpl
@@ -5,7 +5,7 @@
 
 <div id="main">
 <div id="mainbloc">
-	<h1>About Koha</h1>
+	<h1>Data about the current version of Koha for bug reports (or general interest).</h1>
 	
 <table>
 	<caption>Server information</caption>
