working on adding library logi
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/auth.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/auth.tmpl
@@ -7,43 +7,35 @@
     <!-- TMPL_IF NAME="loginprompt" -->Log in to Koha<!-- /TMPL_IF -->
 </title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
-<div id="main">
-<h1>Log in to Koha</h1>
+<div id="login">
+<h1><a href="http://koha.org">Koha</a></h1>
 <!-- TMPL_IF NAME="nopermission" -->
-<!-- This is what is displayed if user doesn"t have permission --><h3>Login Error</h3>
-<p>Sorry, Koha doesn"t think you have permission for this page.</p>
+<div id="login_error"><strong>Error</strong>: unauthorized user <a href="/cgi-bin/koha/mainpage.pl?logout.x=1">click to log out</a></div>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="timed_out" -->
-<!-- This is what is displayed if login has timed out -->
-<h3>Login Error</h3><p>Sorry, your session has timed out.  Please login again.</p>
+<div id="login_error"><strong>Login Error</strong>: session timed out, please log in again</div>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="different_ip" -->
-<!-- This is what is displayed if user"s IP has changed -->
-<h3>Login Error</h3><p>You are accessing Koha from a different ip address! Please login again.</p>
+<div id="login_error"><strong>Login Error</strong>IP address has changed, please log in again </div>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="invalid_username_or_password" -->
-<!-- This is what is displayed if the username or password doesn"t work -->
-<h3>Login Error</h3><p>You entered an incorrect username or password.  Please try again.</p>
+<div id="login_error"><strong>Login Error</strong>Incorrect username or password</div>
 <!-- /TMPL_IF -->
 
-
-<!-- TMPL_IF NAME="loginprompt" -->
 <!-- login prompt time-->
-<form action="<!-- TMPL_VAR NAME="url" -->" method="post" name="mainform" id="mainform">
+<form action="<!-- TMPL_VAR NAME="url" -->" method="post" name="loginform" id="loginform">
 <!-- TMPL_LOOP NAME="INPUTS" -->
     <input type="hidden" name="<!-- TMPL_VAR NAME="name" -->" value="<!-- TMPL_VAR NAME="value" -->" />
 <!-- /TMPL_LOOP -->
-<p>
-<label>Username:<br />
-<input type="text" name="userid" id="userid" class="input" value="" size="20" tabindex="10" /></label>
+<p><label>Username:<br />
+<input type="text" name="userid" id="userid" class="input" value="<!-- TMPL_VAR NAME="userid" -->" size="20" tabindex="1" /></label>
 </p>
-<p>
-<label>Password:<br />
-<input type="password" name="password" id="password" class="input" value="" size="20" tabindex="20" /></label>
-</p> 
+<p><label>Password:<br />
+<input type="password" name="password" id="password" class="input" value="" size="20" tabindex="2" /></label>
+</p>
 <p>
 <label for="branch">Library:</label>
 <select name="branch" id="branch" class="input">
@@ -52,9 +44,14 @@
 <!-- /TMPL_LOOP -->
 </select>
 </p>
-<p class="submit"><input type="submit" value="Login &raquo;" /></p>
+<p><label><input name="rememberme" type="checkbox" id="rememberme" value="forever" tabindex="3" />Remember me</label>
+</p>
+
+<p class="submit"><input id="submit" type="submit" value="Login &raquo;" tabindex="4" /></p>
 </form>
-<!-- /TMPL_IF -->
+<ul>
+	<li><a href="/cgi-bin/koha/lostpassword.pl" title="Password Lost and Found">Lost your password?</a></li>
+</ul>
 
 <script type="text/javascript">
 // <![CDATA[
