Revert "set the branch at login"
This reverts commit bf1fd83d087d13561ddd8ade870413a9912c5329.

Conflicts:

	koha-tmpl/intranet-tmpl/prog/en/auth.tmpl

Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/auth.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/auth.tmpl
@@ -52,6 +52,7 @@
 <ul>
 	<li><a href="/cgi-bin/koha/lostpassword.pl" title="Password Lost and Found">Lost your password?</a></li>
 </ul>
+<!-- /TMPL_IF -->
 
 <script type="text/javascript">
 // <![CDATA[
