--- a/koha-tmpl/intranet-tmpl/prog/en/auth.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/auth.tmpl
@@ -14,15 +14,15 @@
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="timed_out" -->
-<div id="login_error"><strong>Login Error</strong>: session timed out, please log in again</div>
+<div id="login_error"><strong>Error</strong>: session timed out, please log in again</div>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="different_ip" -->
-<div id="login_error"><strong>Login Error</strong>IP address has changed, please log in again </div>
+<div id="login_error"><strong>Error</strong>: IP address has changed, please log in again </div>
 <!-- /TMPL_IF -->
 
 <!-- TMPL_IF NAME="invalid_username_or_password" -->
-<div id="login_error"><strong>Login Error</strong>Incorrect username or password</div>
+<div id="login_error"><strong>Error</strong>: Incorrect username or password</div>
 <!-- /TMPL_IF -->
 
 <!-- login prompt time-->
@@ -36,22 +36,20 @@
 <p><label>Password:<br />
 <input type="password" name="password" id="password" class="input" value="" size="20" tabindex="2" /></label>
 </p>
-<p>
-<label for="branch">Library:</label>
+<p><label for="branch">Library:<br />
 <select name="branch" id="branch" class="input">
 <!-- TMPL_LOOP NAME="branchloop" -->
 <option value="<!-- TMPL_VAR NAME='branchcode' -->"><!-- TMPL_VAR NAME='branchname' --></option>
 <!-- /TMPL_LOOP -->
-</select>
+</select></label>
 </p>
-<p><label><input name="rememberme" type="checkbox" id="rememberme" value="forever" tabindex="3" />Remember me</label>
-</p>
+<!-- <p><label><input name="rememberme" type="checkbox" id="rememberme" value="forever" tabindex="3" />Remember me</label></p> -->
 
 <p class="submit"><input id="submit" type="submit" value="Login &raquo;" tabindex="4" /></p>
 </form>
-<ul>
-	<li><a href="/cgi-bin/koha/lostpassword.pl" title="Password Lost and Found">Lost your password?</a></li>
-</ul>
+<!--<ul> -->
+<!--	<li><a href="/cgi-bin/koha/lostpassword.pl" title="Password Lost and Found">Lost your password?</a></li> -->
+<!-- </ul> -->
 <!-- /TMPL_IF -->
 
 <script type="text/javascript">
