fix bug in calendar handling
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/histsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/histsearch.tmpl
@@ -6,6 +6,16 @@
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
 <!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
+<!-- Additions to enable Calendar system -->
+<link rel="stylesheet" type="text/css" href="/intranet-tmpl/prog/en/includes/calendar/calendar-system.css">
+<!-- End of additions -->
+
+<!-- Additions to enable Calendar system -->
+<script type="text/javascript" src="/intranet-tmpl/prog/en/includes/calendar/calendar.js"></script>
+<script type="text/javascript" src="/intranet-tmpl/prog/en/includes/calendar/calendar-en.js"></script>
+<script type="text/javascript" src="/intranet-tmpl/prog/en/includes/calendar/calendar-setup.js"></script>
+<!-- End of additions -->
+
 	<h1>Order search</h1>
 	<div id="acqui_histsearch">
 		<form action="/cgi-bin/koha/acqui/histsearch.pl" method="post">
