don't show the issuer on OPAC
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/opac-tmpl/prog/en/opac-detail.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-detail.tmpl
@@ -181,7 +181,7 @@
             <td><!-- TMPL_VAR NAME="branchname" --> <!-- TMPL_VAR name="location" --> <!-- TMPL_IF NAME="itemcallnumber" --> <!-- TMPL_VAR NAME="itemcallnumber" --><!-- /TMPL_IF --></td>
             <td>
                 <!-- TMPL_IF name="datedue" -->
-                On issue to <!-- TMPL_VAR NAME="cardnumber" -->
+                On issue
                 <!-- TMPL_ELSE -->
                 <!-- TMPL_IF name="notforloan" -->
                 <!-- TMPL_VAR name="notforloan" -->
