show username instead of cardnumber
Signed-off-by: Chris Cormack <crc@liblime.com>

Note from Chris, this should probably be a system preference, some libraries want the cardnumber there.

--- a/koha-tmpl/intranet-tmpl/prog/en/catalogue/detail.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/catalogue/detail.tmpl
@@ -134,7 +134,7 @@
                     <td><!-- TMPL_VAR NAME="branchname" --> <!-- TMPL_VAR name="location" --> <!-- TMPL_IF NAME="itemcallnumber" --> <!-- TMPL_VAR NAME="itemcallnumber" --><!-- /TMPL_IF --></td>
                     <td>
                         <!-- TMPL_IF name="datedue" -->
-                            On issue to <a href="/cgi-bin/koha/members/moremember.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="cardnumber" --></a>
+                            On issue to <a href="/cgi-bin/koha/members/moremember.pl?borrowernumber=<!-- TMPL_VAR NAME="borrowernumber" -->"><!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --></a>
                         <!-- TMPL_ELSE -->
                             <!-- TMPL_IF name="notforloan" -->
                                 <!-- TMPL_VAR name="notforloan" -->
