--- a/koha-tmpl/intranet-tmpl/prog/en/tools/cleanborrowers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/tools/cleanborrowers.tmpl
@@ -5,9 +5,9 @@
 <!-- Additions to enable Calendar system -->
 <link rel="stylesheet" type="text/css" href="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar-system.css">
 <!-- End of additions --><!-- Additions to enable Calendar system -->
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar-en.js"></script>
-<script type="text/javascript" src="<!-- TMPL_VAR name="themelang" -->/includes/calendar/calendar-setup.js"></script>
+<script type="text/javascript" src="<!-- TMPL_VAR name='themelang' -->/includes/calendar/calendar.js"></script>
+<script type="text/javascript" src="<!-- TMPL_VAR name='themelang' -->/includes/calendar/calendar-en.js"></script>
+<script type="text/javascript" src="<!-- TMPL_VAR name='themelang' -->/includes/calendar/calendar-setup.js"></script>
 <!-- End of additions -->
 
 <!-- TMPL_INCLUDE NAME="menus.inc" -->
@@ -21,9 +21,9 @@
     <form name="f1" onsubmit="return checkForm(this);" action="/cgi-bin/koha/tools/cleanborrowers.pl" method="post">
     <fieldset>
     <legend>What do you want to do ?</legend>
-        <input id="checkborrower" type="checkbox" name="checkbox" value="borrower" checked />
-        <label for="checkborrower">Delete borrower who has not borrowed since:</label>
-        <input size="10" id="date1" name="filterdate1" value="<!-- TMPL_VAR NAME="filterdate1"-->" type="text" />
+        <p><input id="checkborrower" type="checkbox" name="checkbox" value="borrower" checked />
+        Delete borrower who has not borrowed since:
+        <input size="10" id="date1" name="filterdate1" value="<!-- TMPL_VAR NAME="filterdate1"-->" type="text" /></p>
             <script type="text/javascript">
                 Calendar.setup(
                  {
@@ -34,9 +34,9 @@
             </script>
         
         <br />
-        <input id="checkissue" type="checkbox" name="checkbox" value="issue" checked />
-        <label for="checkissue">Anonymize issue history older than</label>
-        <input size="10" id="date2" name="filterdate2" value="<!-- TMPL_VAR NAME="filterdate2"-->" type="text" />
+        <p><input id="checkissue" type="checkbox" name="checkbox" value="issue" checked />
+        Anonymize issue history older than
+        <input size="10" id="date2" name="filterdate2" value="<!-- TMPL_VAR NAME="filterdate2"-->" type="text" /></p>
             <script type="text/javascript">
                 Calendar.setup(
                  {
