--- a/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
@@ -27,7 +27,7 @@
             <a href="/cgi-bin/koha/members/moremember.pl?borrowernumber=<!-- TMPL_VAR name="borrowernumber" -->">details</a>
                 / <a href="/cgi-bin/koha/members/memberentry.pl?borrowernumber=<!-- TMPL_VAR name="borrowernumber" -->&amp;modify=edit&amp;destination=circ&categorycode=<!-- TMPL_VAR name="categorycode" -->">edit</a>
         <p>
-        <!--TMPL_IF Name="warndeparture"--><p class="problem"> Patron will leave soon.</p><!--/TMPL_IF-->
+        <!--TMPL_IF Name="warndeparture"--><p class="problem"> Patron card expires on <!-- TMPL_VAR name="warndeparture" -->.</p><!--/TMPL_IF-->
         <!-- TMPL_IF NAME="streetaddress"-->
             <!-- TMPL_VAR NAME="streetaddress" -->,
         <!-- TMPL_ELSE -->
