--- a/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/circ/circulation.tmpl
@@ -244,7 +244,7 @@ No patron matched <!-- TMPL_VAR name="message" -->
     <legend>Checkout an item</legend>
 
     <p>
-    <label for="barcode">Enter tem barcode: </label><input type="text" name="barcode" size="14" />
+    <label for="barcode">Enter item barcode: </label><input type="text" name="barcode" size="14" />
     
         <!-- RESULT OF ISSUING REQUEST -->
         <!-- TMPL_IF NAME="IMPOSSIBLE" -->
