--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/supplier.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/supplier.tmpl
@@ -134,15 +134,24 @@
 <!--TMPL_ELSE-->
     <h1>Information for : <!-- TMPL_VAR NAME="name" --></h1>
     <div id="action">
-        <a href="supplier.pl?supplierid=<!--TMPL_VAR Name="id"-->&op=enter">
-            Edit Supplier
-        </a>
-        <a href="booksellers.pl?supplier=<!--TMPL_VAR Name="id"-->">
-            Manage Orders
-        </a>
-        <a href="parcels.pl?supplierid=<!--TMPL_VAR Name="id"-->"> 
-            Receive Parcel
-        </a>
+        <div class="edit">
+            <a href="supplier.pl?supplierid=<!--TMPL_VAR Name="id"-->&op=enter">
+                Edit Supplier
+            </a>
+            <!-- TMPL_UNLESS name="basketcount" -->
+                <a href="javascript:confirm_deletion()">
+                    Delete Supplier
+                </a>
+            <!-- /TMPL_UNLESS -->
+        </div>
+        <div class="view">
+            <a href="booksellers.pl?supplier=<!--TMPL_VAR Name="id"-->">
+                Manage Orders
+            </a>
+            <a href="parcels.pl?supplierid=<!--TMPL_VAR Name="id"-->"> 
+                Receive Parcel
+            </a>
+        </div>
     </div>
         <fieldset>
             <legend>Company details</legend>
@@ -246,5 +255,11 @@
         </fieldset>
 </div>
 <!--/TMPL_IF-->
-
+<script>
+function confirm_deletion() {
+    if (confirm("Confirm deletion of this supplier ?")) {
+        window.location="/cgi-bin/koha/acqui/supplier.pl?supplierid=<!--TMPL_VAR Name="id"-->&op=delete";
+    }
+}
+</script>
 <!-- TMPL_INCLUDE name="intranet-bottom.inc" -->
