show callnumber in result list and update SQL by using LEFT JOIN
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/serials/serials-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/serials/serials-home.tmpl
@@ -119,7 +119,8 @@ Serials updated :
                 <!-- TMPL_ELSE -->
                     <td>
                 <!-- /TMPL_IF -->
-                <!-- TMPL_IF name="notes" -->(<!-- TMPL_VAR name="notes" -->)<!-- /TMPL_IF -->
+                <!-- TMPL_IF name="notes" --><p><!-- TMPL_VAR name="notes" --></p><!-- /TMPL_IF -->
+                <!-- TMPL_IF name="callnumber" --><p><!-- TMPL_VAR name="callnumber" --></p><!-- /TMPL_IF -->
                 </td>
                 <!-- TMPL_IF name="toggle" -->
                     <td class="hilighted">
