--- a/koha-tmpl/intranet-tmpl/prog/en/acqui/lateorders.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/acqui/lateorders.tmpl
@@ -5,93 +5,99 @@
 <!-- TMPL_INCLUDE NAME="menu-acqui.inc" -->
 
 <h1 ><!-- TMPL_IF name="Supplier" --><!-- TMPL_VAR name="Supplier" --> : <!--/TMPL_IF -->Late issues</h1>
-	<div id="acqui_lateorders">
-		<table>
-			<tr>
-				<th>Supplier</th>
-				<th>Order Date</th>
-				<th>Book information</th>
-				<th>Total cost</th>
-				<th>Basket</th>
-				<th>&nbsp;</th>
-			</tr>
-			<tr>
-					<td class="doNotPrint">
-                        <form action="lateorders.pl" method="post">
-						<!-- TMPL_VAR name="CGIsupplier" -->
-					</td>
-					<td align="center" class="doNotPrint">
-						<input align="right" size="4" maxlength="3" type="text" name="delay" value="<!--TMPL_VAR Name="delay" -->" /> days
-					</td>
-					<td colspan="2">
-						&nbsp;
-					</td>
-					
-					
-                    <td class="doNotPrint">
-						<input type="submit" value="filter" />
-                        </form>
-					</td>
-					<td class="doNotPrint">
-                        <form name="claim" method="post">
-                        <input type="hidden" name="op" value="send_alert" />
-                        <select name="letter_code" >
-                          <!--TMPL_LOOP Name="letters"-->
+<div id="acqui_lateorders">
+    <table>
+        <tr>
+            <th>Order Date</th>
+            <th>Supplier</th>
+            <th>Book information</th>
+            <th>Total cost</th>
+            <th>Basket</th>
+            <th>&nbsp;</th>
+        </tr>
+        <tr>
+            <td align="center" class="doNotPrint">
+                <form action="lateorders.pl" method="post">
+                <input align="right" size="4" maxlength="3" type="text" name="delay" value="<!--TMPL_VAR Name="delay" -->" /> days
+            </td>
+            <td class="doNotPrint">
+                    <!-- TMPL_VAR name="CGIsupplier" -->
+            </td>
+            <td colspan="2">
+                    &nbsp;
+            </td>
+            <td class="doNotPrint">
+                <input type="submit" value="filter" />
+                </form>
+            </td>
+            <td class="doNotPrint">
+                <form name="claim" method="post">
+                    <input type="hidden" name="op" value="send_alert" />
+                    <select name="letter_code" >
+                        <!--TMPL_LOOP Name="letters"-->
                             <option value="<!--TMPL_VAR Name="code"-->"><!--TMPL_VAR Name="name"--></option>
-                          <!--/TMPL_LOOP -->
-                        </select>
-						<input type="submit" value="Claim Order" />
-					</td>
-			</tr>
-			<!-- TMPL_LOOP name="lateorders" -->
-				<!--TMPL_IF Name="hilighted" --> <tr class="hilighted"> <!--TMPL_ELSE--> <tr> <!-- /TMPL_IF -->
-					<td class="doNotPrint">
-						<!-- TMPL_VAR name="supplier" -->
-					</td>
-					<td>
-						<!-- TMPL_VAR name="orderdate" -->
-						(<!-- TMPL_VAR name="latesince" --> days)
-					</td>
-					<td >
-						<b><!-- TMPL_VAR name="title" --></b>
-					<!-- TMPL_IF name="author" --><br/><i>Author:</i> <!-- TMPL_VAR NAME="author" --><!-- /TMPL_IF -->
-					<!-- TMPL_IF name="publisher" --><br/><i>Published by:</i> <!-- TMPL_VAR NAME="publisher" --><!-- TMPL_IF name="publicationyear" --><i> in </i><!-- TMPL_VAR name="publicationyear" --><!-- /TMPL_IF --><!-- /TMPL_IF -->
-					</td>
-					<td align="right">
-						<!-- TMPL_VAR name="unitpricesupplier" -->x
-						<!-- TMPL_VAR name="quantity" --> = 
-						<!-- TMPL_VAR name="subtotal" -->
-					</td>
-					<td class="doNotPrint">
-						<p><a href="basket.pl?basketno=<!-- TMPL_VAR name="basketno" -->" title="basket">
-						    <!-- TMPL_VAR name="basketno" -->
-						</a>
-						</p>
-						<p title="budget"><!-- TMPL_VAR name="budget" --></p>
-						<p title="branch"><!-- TMPL_VAR name="branch" --></p>
-					</td>
-					<td class="doNotPrint">
-						<input type="checkbox" name="claim_for" value="<!--TMPL_VAR Name="ordernumber" -->" />
-					</td>
-				</tr>
-			<!-- /TMPL_LOOP -->
-			<tr> 
-					<th>
-						Total
-					</th>
-					<th colspan="2">
-						&nbsp;
-					</th>
-					<th>
-						<!-- TMPL_VAR name="total" -->
-					</th>
-					<th class="doNotPrint"> &nbsp;</th>
-					<td>
-						<input type="submit" value="Claim Order" />
-                        </form>
-					</td>
-			</tr>
-		</table>
-	</div>
+                        <!--/TMPL_LOOP -->
+                    </select>
+                    <input type="submit" value="Claim Order" />
+            </td>
+        </tr>
+        <!-- TMPL_LOOP name="lateorders" -->
+            <!--TMPL_IF Name="hilighted" -->
+                <tr class="hilighted"> 
+            <!--TMPL_ELSE-->
+                <tr>
+            <!-- /TMPL_IF -->
+                <td>
+                    <!-- TMPL_VAR name="orderdate" -->
+                    (<!-- TMPL_VAR name="latesince" --> days)
+                </td>
+                <td class="doNotPrint">
+                        <!-- TMPL_VAR name="supplier" -->
+                </td>
+                <td >
+                    <b><!-- TMPL_VAR name="title" --></b>
+                    <!-- TMPL_IF name="author" --><br/><i>Author:</i> <!-- TMPL_VAR NAME="author" --><!-- /TMPL_IF -->
+                    <!-- TMPL_IF name="publisher" -->
+                        <br/><i>Published by:</i> <!-- TMPL_VAR NAME="publisher" -->
+                        <!-- TMPL_IF name="publicationyear" -->
+                            <i> in </i><!-- TMPL_VAR name="publicationyear" -->
+                        <!-- /TMPL_IF -->
+                    <!-- /TMPL_IF -->
+                </td>
+                <td align="right">
+                    <!-- TMPL_VAR name="unitpricesupplier" -->x<!-- TMPL_VAR name="quantity" --> = 
+                    <!-- TMPL_VAR name="subtotal" -->
+                    <p title="budget"><!-- TMPL_VAR name="budget" --></p>
+                </td>
+                <td class="doNotPrint">
+                    <p><a href="basket.pl?basketno=<!-- TMPL_VAR name="basketno" -->" title="basket">
+                        <!-- TMPL_VAR name="basketno" -->
+                    </a>
+                    </p>
+                    <p title="branch"><!-- TMPL_VAR name="branch" --></p>
+                </td>
+                <td class="doNotPrint">
+                    <input type="checkbox" name="claim_for" value="<!--TMPL_VAR Name="ordernumber" -->" />
+                </td>
+            </tr>
+        <!-- /TMPL_LOOP -->
+        <tr> 
+            <th>
+                Total
+            </th>
+            <th colspan="2">
+                &nbsp;
+            </th>
+            <th>
+                <!-- TMPL_VAR name="total" -->
+            </th>
+            <th class="doNotPrint"> &nbsp;</th>
+            <td>
+                <input type="submit" value="Claim Order" />
+                </form>
+            </td>
+        </tr>
+    </table>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
 
