Adding KOHAVERSION management.
The kohaversion is in the code directory (in /kohaversion.pl)
C4::Context now has a new method C4::Context->KOHAVERSION
that returns the koha code version.
The systempreference Version contains the database version.

If the 2 are differents, when the user log in, he is redirected to web installer (new behaviour : before this commit, the check was done on everypage, it's too CPU costly I think)

In the web installer, we check now if we do a new setup or an upgrade and show only the appropriate link.

The updatedatabase contains a lot of new things :
* SetVersion($kohaversion), that set the kohaversion after each update
* TransformToNum($kohaversion) that returns a number (3.0000001 from 3.00.00.001 for example) for a given koha version
* DropAllForeignKeys($table) that does what is written : drop all foreign keys. A shame it's not possible directly in mySQL...
* for each database update, just :
add the following lines :
=item
    Describe what it does for other developpers
=cut

$DBversion = "your.koha.version.dbnumber";
if (C4::Context->preference("Version") < TransformToNum($DBversion)) {
	#
	# DO YOUR UPDATE STUFF
	#
        print "Upgrade to $DBversion done (specify what it does if you want)\n";
        SetVersion ($DBversion);
}

IMPORTANT NOTES :
in koha 2.2, a new install was done through installing a 2.2.0 database, then updating it to the installed version.
in Koha 3.0, /installer/kohaversion.sql MUST contain an uptodate version, as the installer set the DB version to kohaversion after uploading kohaversion.sql. It does NOT run updatedatabase.

The update from Koha 2.2 to Koha 3.0 must NOT be done through the webinstaller : updatedatabase is very very long to run and you'll reach Apache timeout for sure. See http://wiki.koha.org/doku.php?id=22_to_30 that contains my notes for upgrading (with some/few UNIMARC specific stuff)


Note For RM, please eyeball this change

Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/installer/step3.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/installer/step3.tmpl
@@ -80,6 +80,7 @@ function Hide(link) {
   <h1>Congratulations, Installation complete</h1>
   <p>If this page does not redirect in 5 seconds, click <a href="/">here</a>.</p> 
 <!--/TMPL_IF-->
+
 <!--TMPL_IF Name="selectframeworks"-->
   <h2 align="center">Selecting Default Settings</h2>
   <form name="frameworkselection" method="post" action="install.pl">
@@ -120,6 +121,8 @@ function Hide(link) {
   </form>
   </p>
 <!--/TMPL_IF-->
+
+
 <!--TMPL_IF Name="addframeworks"-->
   <h2 align="center">Results of installation:</h2>
   <p>Language :<!--TMPL_VAR Name="fwklanguage"--></p>
@@ -143,23 +146,25 @@ function Hide(link) {
   </p>
 <!--/TMPL_IF-->
 
-<!--TMPL_IF Name="importdatastructure"-->
-	<!--TMPL_IF Name="error"-->
-		<p>The following error occcurred while importing the database structure:</p>
-		<p class="error"><!-- TMPL_VAR NAME="error" --> </p>
-		<p>Please contact your system administrator</p>
-	<!-- TMPL_ELSE -->
-  <h2 align="center">Success</h2>
-  <ul>
-  <li>Database tables created</li>
-  </ul>
-  <form action="install.pl">
-  <input type="hidden" name="step" value="3" />
-  <p> Click Next to continue <input value="Next &gt;&gt;" type="submit"></p>
-  </form>
 
-	<!-- /TMPL_IF -->
+<!--TMPL_IF Name="importdatastructure"-->
+    <!--TMPL_IF Name="error"-->
+        <p>The following error occcurred while importing the database structure:</p>
+        <p class="error"><!-- TMPL_VAR NAME="error" --> </p>
+        <p>Please contact your system administrator</p>
+    <!-- TMPL_ELSE -->
+        <h2 align="center">Success</h2>
+        <ul>
+        <li>Database tables created</li>
+        </ul>
+        <form action="install.pl">
+        <input type="hidden" name="step" value="3" />
+        <p> Click Next to continue <input value="Next &gt;&gt;" type="submit"></p>
+        </form>
+    <!-- /TMPL_IF -->
 <!--/TMPL_IF-->
+
+
 <!--TMPL_IF Name="proposeimport"-->
   <p>Now we're ready to create the database tables and fill them with some default data.</p>
   <form action="install.pl">
@@ -167,17 +172,24 @@ function Hide(link) {
   <input type="hidden" name="op" value="importdatastructure"/>
   <p> Click Next to continue <input value="Next &gt;&gt;" type="submit"></p>
   </form>
-
-
 <!--/TMPL_IF-->
+
+
 <!--TMPL_IF Name="default"-->
-
-<p>Now we're ready to do some basic configuration. Please <a href="install.pl?step=3&amp;op=selectframeworks" class="button">install basic configuration settings</a> to continue the installation.</p>
-<p>
-Alternatively, if you are upgrading from a previous version of Koha, you can <a href="install.pl?step=3&amp;op=updatestructure" class="button">update your database</a>. Otherwise, you can skip this step.
-</p>
-
+    <!-- TMPL_IF name="upgrading" -->
+        <p>
+            We are upgrading from Koha <!-- TMPL_VAR name="dbversion" --> to <!-- TMPL_VAR name="kohaversion" -->, you must <a href="install.pl?step=3&amp;op=updatestructure" class="button">update your database</a>
+        </p>
+    <!-- TMPL_ELSE -->
+        <p>We are ready to do some basic configuration. Please 
+            <a href="install.pl?step=3&amp;op=selectframeworks" class="button">install basic configuration settings</a>
+            to continue the installation.
+        </p>
+    <!-- /TMPL_IF -->
 <!--/TMPL_IF-->
+
+
+
 <!--TMPL_IF Name="updatestructure"-->
   <div><h2 align="center">Updating Mysql database</h2>
   <!--TMPL_IF Name="updatereport"-->
@@ -186,9 +198,9 @@ Alternatively, if you are upgrading from a previous version of Koha, you can <a 
     <!--TMPL_VAR Name="updatereport"-->
     </p>
   <!--TMPL_ELSE-->
-    <p>Everything went OK.</p>
+    <p>Everything went OK, update done.</p>
   <!--/TMPL_IF-->
-<a href="install.pl?step=3&amp;op=selectframeworks" class="button">Continue to Framework Selection</a>
+<a href="install.pl?step=3&amp;op=finished" class="button">Continue to login to Koha</a>
   </div>
 <!--/TMPL_IF-->
 
